Song Selector.css
* {
margin: none;
/* border: 1px solid black; */

}

body {
    /* background-image: linear-gradient(to top, purple, white); */
    background: linear-gradient(28deg, rgb(66, 68, 71), rgb(168, 169, 171) 30%);
    margin-left: 10%;
    margin-right: 10%;
    /* margin: auto; */
    border: 1px solid black;
    border-radius: 15px;
}

.page {
    /* background-color:rgb(206, 215, 232); */
    background-color:rgb(147, 170, 212);
    padding-bottom: 5rem;
    border-radius: 15px;
}

.purple {
    /* background-color: rgb(156, 9, 169); */
    /* background-color: rgb(22, 22, 198); */
    /* background-color: white; */
}

h1 {
    text-align: center;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 45px;
    /* color: rgb(6, 6, 82); */
    color: rgb(230, 234, 241);
    font-weight: 10px;
    text-decoration: underline;
    background-color: rgb(6, 6, 82);
    margin: 0;
    padding: 2rem;
    border-radius: 15px 15px 0 0;
}

p {
    color:rgb(6, 6, 82);
    /* text-decoration: underline; */
    /* border-bottom: 1px solid black; */
    font-size: 20px;
    font-family:Georgia, 'Times New Roman', Times, serif
}

.shuffle-box {
    /* width: 100%; */
    /* border-radius: 100px; */
    /* color: rgb(240, 230, 165); */
    padding: 1rem 2rem;
    justify-content: space-between;
}

.shuffle {
    display: flex;
    justify-content: center;
    /* border: 1px solid black; */
    padding: 3rem;
}

.shuffle-btn {
    height: 5rem;
    width: 22rem;
    border-radius: 15px;
    margin: .1rem auto;
    font-size: 2rem;
    /* font-stretch: wider; */
    color: white;
    background-color:rgb(108, 108, 186);
}

.shuffle-btn:hover {
    background-color: rgb(37, 37, 129)
}

.shuffle-btn:active {
    /* background-color: rgb(6, 6, 82) */
    transform: translate(0.2%, 3px);
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
}

hr {
    border: 1px solid black;
}

.result {
    border: 1px solid black;
    background-color: rgb(214, 227, 229);
    /* background-color: white; */
    border-radius: 15px;
    width: 45%;
    display: inline-block;
    text-align: justify;
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    max-width: 45%;
    min-height: 20%;
}

.info-box {
    text-align: center;
    max-width: 100%;
    /* max-height: 20%; */
}

.previous {
    display: flex;
    justify-content: center;
    padding-bottom: 2rem;
}

.result-six {
    border: 1px solid black;
    /* background-color: rgb(240, 230, 165); */
    background-color: white;
    border-radius: 15px;
    width: 50%;
    margin: 0 auto;
}

.one {
    float: left;
}

.two {
    float: right;
}

.three {
    float: left;
}

.four {
    float: right;
}

.five {
    margin-left: 27.5%;

}

img {
    height: 12%;
    width: 12%;
    float: left;
    margin-top: 3%;
    /* margin-bottom: 3%; */
}

.interaction {
    display: flex;
    align-content: space-between;
    margin-top: 2rem;
}

.interaction-btn {
    margin: auto;
    height: 3rem;
    width: 15rem;
}

.hidden {
    /* content-visibility: hidden; */
    display: none;
}

